2006-12-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: updated news

2006-11-30  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man9/strlog.9.man: documentation update
	* lib/libc/strlog.c: correction from userland testing

2006-11-26  Brian Bidulock  <bidulock@openss7.org>

	* include/strlog.h: rationalization to strutil package
	* include/sys/strlog.h: rationalization to strutil package
	* include/sys/streams/strlog.h: rationalization to strutil package

	* src/drivers/log.c: corrections from testing
	* src/test/test-log.c: test suite executable for log driver
	* tests/testsuite-log.at: auto test test suite for log driver

	* acinclude.m4: added note about the dangers of bottom half suppression

	* Makefile.am: added strlog files
	* include/sys/streams/strlog.h: added declarations for library functions
	* lib/libc/strlog.c: added strlog functions to STREAMS library
	* lib32/Makefile.am: added strlog files

	* src/test/testlog.c: minor user test program for checking strlog packing algorithm

	* src/drivers/log.c: corrections from testing
	* src/util/strace.c: corrections from testing
	* src/util/strerr.c:corrections from testing
	* src/util/strlog.c:corrections from testing

	* src/test/test-clone.c: enhanced capabilities from m2pa tests
	* src/test/test-connld.c: enhanced capabilities from m2pa tests
	* src/test/test-echo.c: enhanced capabilities from m2pa tests
	* src/test/test-fifo.c: enhanced capabilities from m2pa tests
	* src/test/test-log.c: enhanced capabilities from m2pa tests
	* src/test/test-loop.c: enhanced capabilities from m2pa tests
	* src/test/test-mux.c: enhanced capabilities from m2pa tests
	* src/test/test-nsdev.c: enhanced capabilities from m2pa tests
	* src/test/test-nuls.c: enhanced capabilities from m2pa tests
	* src/test/test-pipe.c: enhanced capabilities from m2pa tests
	* src/test/test-pipemod.c: enhanced capabilities from m2pa tests
	* src/test/test-sad.c: enhanced capabilities from m2pa tests